--- a/forcelink.html
+++ b/forcelink.html
@@ -46,18 +46,20 @@
     { "source": 3, "target": 4, "distance": 40 },
     { "source": 4, "target": 5, "distance": 50 },
     { "source": 5, "target": 6, "distance": 60 },
-    { "source": 6, "target": 0, "distance": 70 }];
+    ];
 
     function dist(d) {
-      return d.distance + 30;
+      return 50;
     }
 
 
-    var linkForce = d3.forceLink(nodeLinks).distance(dist).strength(2);
+    var linkForce = d3.forceLink(nodeLinks).distance(dist).strength(1).iterations(10);
 
 
 
-    var simulation = d3.forceSimulation(nodeData).alphaDecay(0.01).force("linkForce", linkForce);
+    var simulation = d3.forceSimulation(nodeData)
+      .force("link", linkForce)
+      .force('charge', d3.forceManyBody().strength(-300));
 
 
 
@@ -71,8 +73,9 @@
         .on("end", dragended));
 
     function dragstarted(d) {
-      simulation.restart();
-      simulation.alpha(0.7);
+      if (!d3.event.active) {
+        simulation.alphaTarget(0.8).alphaDecay(0.3).restart();
+      }
       d.fx = d.x;
       d.fy = d.y;
     }
@@ -83,9 +86,11 @@
     }
 
     function dragended(d) {
-      d.fx = null;
-      d.fy = null;
-      simulation.alphaTarget(0.1);
+      if (!d3.event.active) {
+        simulation.alphaTarget(0);
+      }
+      d.fx = d3.event.x;
+      d.fy = d3.event.y;
     }
 
     function ticked() {
