--- a/mapperpipeline.html
+++ b/mapperpipeline.html
@@ -21,17 +21,17 @@
 
     const width = window.innerWidth,
       height = window.innerHeight;
-    const nodes = [{ x: 66, y: 10, label: 'mapper' }, { x: 150, y: 50, label: 'join' }, { x: 250, y: 80, label: 'rest get' }];
-    const links = [{ source: 0, target: 1 }, { source: 1, target: 2 }];
-    let hoveredNode = null;
-    let shouPullLine = false;
-    let selectedHeadCircle = null;
-    let selectedHeadLine = null;
+    const nodes = [
+      { nodex: 66, nodey: 10, label: 'mapper', cx: null, cy: null },
+      { nodex: 150, nodey: 50, label: 'join', cx: null, cy: null },
+      { nodex: 250, nodey: 80, label: 'rest get', cx: null, cy: null }
+    ];
+    // const links = [{ source: 0, target: 1 }, { source: 1, target: 2 }];
     const rectSize = 62;
-    links.forEach(d => {
-      d.source = nodes[d.source];
-      d.target = nodes[d.target];
-    })
+    // links.forEach(d => {
+    //   d.source = nodes[d.source];
+    //   d.target = nodes[d.target];
+    // })
     const svg = d3.select("body").append("svg")
       .attr("width", width)
       .attr("height", height);
@@ -50,22 +50,31 @@
       .append('rect')
       .attr('height', rectSize)
       .attr('width', rectSize)
-      .attr('x', d => d.x)
-      .attr('y', d => d.y)
+      .attr('x', d => d.nodex)
+      .attr('y', d => d.nodey)
       .attr('fill', '#79A1E2');
+    const getLabelX = d => d.nodex + rectSize / 2;
+    const getLabelY = d => d.nodey + rectSize / 2;
     const labelsGroup = root.append('g')
       .selectAll('text')
       .data(nodes)
       .enter()
       .append('text')
-      .attr('x', d => d.x + rectSize / 2)
-      .attr('y', d => d.y + rectSize / 2)
+      .attr('x', getLabelX)
+      .attr('y', getLabelY)
       .attr('font-size', 12)
       .attr("text-anchor", "middle")
       .attr('font-weight', 'bold')
       .attr('line-spacing', 11)
       .attr('fill', '#000000')
+      .attr('cursor', 'default')
       .text(d => d.label);
+    const getTailLineX1 = d => d.nodex - 5;
+    const getTailLineY1 = d => d.nodey + rectSize / 2;
+    const getTailLineX2 = d => d.nodex - 3;
+    const getTailLineY2 = d => d.nodey + rectSize / 2;
+    const getTailRingX = d => d.nodex - 20;
+    const getTailRingY = d => d.nodey + rectSize / 2;
     const tailLineGroup = root.append('g')
       .selectAll('line')
       .data(nodes)
@@ -74,21 +83,26 @@
       .attr('stroke', '#9B9B9B')
       .attr('stroke-width', 6)
       .attr('stroke-linecap', 'square')
-      .attr('x1', d => d.x - 5)
-      .attr('y1', d => d.y + rectSize / 2)
-      .attr('x2', d => d.x - 3)
-      .attr('y2', d => d.y + rectSize / 2)
-    const tailRingGroup = root.append('g')
+      .attr('x1', getTailLineX1)
+      .attr('y1', getTailLineY1)
+      .attr('x2', getTailLineX2)
+      .attr('y2', getTailLineY2)
+    const getTailRingPosition = d => `translate(${getTailRingX(d)}, ${getTailRingY(d)}) rotate(45) translate(-17, -17)`
+    const tailRingGroup = root.append('g').attr('id', 'tailRingGroup')
       .selectAll('path')
       .data(nodes)
       .enter()
       .append('path')
       .attr('d', 'M17,29 C23.627417,29 29,23.627417 29,17 C29,10.372583 23.627417,5 17,5 C10.372583,5 5,10.372583 5,17')
       .attr('stroke-width', 2.5)
-      .attr('transform', d => `translate(${d.x - 20}, ${d.y + rectSize / 2}) rotate(45) translate(-17, -17)`)
+      .attr('transform', getTailRingPosition)
       .attr('stroke', '#9B9B9B')
       .attr('fill', 'none');
-    const headLineGroup = root.append('g')
+    const getHeadLineX1 = d => d.nodex + rectSize + 3;
+    const getHeadLineY1 = d => d.nodey + rectSize / 2;
+    const getHeadLineX2 = d => d.cx || d.nodex + rectSize + 5;
+    const getHeadLineY2 = d => d.cy || d.nodey + rectSize / 2;
+    const headLineGroup = root.append('g').attr('id', 'headLineGroup')
       .selectAll('line')
       .data(nodes)
       .enter()
@@ -96,10 +110,15 @@
       .attr('stroke', '#9B9B9B')
       .attr('stroke-width', 6)
       .attr('stroke-linecap', 'square')
-      .attr('x1', d => d.x + rectSize + 3)
-      .attr('y1', d => d.y + rectSize / 2)
-      .attr('x2', d => d.x + rectSize + 5)
-      .attr('y2', d => d.y + rectSize / 2);
+      .attr('x1', getHeadLineX1)
+      .attr('y1', getHeadLineY1)
+      .attr('x2', getHeadLineX2)
+      .attr('y2', getHeadLineY2);
+    const R = 9;
+    const getHeadRingCX = d => {
+      return d.cx || d.nodex + rectSize + 5 + R
+    };
+    const getHeadRingCY = d => d.cy || d.nodey + rectSize / 2;
     const headRingGroup = root.append('g')
       .selectAll('circle')
       .data(nodes)
@@ -108,36 +127,36 @@
       .attr('stroke', '#9B9B9B')
       .attr('stroke-width', 2)
       .attr('fill', '#CCDCEE')
-      .attr('cx', d => d.x + rectSize + 5 + 9)
-      .attr('cy', d => d.y + rectSize / 2)
-      .attr('r', 9)
+      .attr('cx', getHeadRingCX)
+      .attr('cy', getHeadRingCY)
+      .attr('r', R)
       .attr('cursor', 'pointer');
     function updateNode(node) {
-      node.attr('x', d => d.x)
-        .attr('y', d => d.y);
+      node.attr('x', d => d.nodex)
+        .attr('y', d => d.nodey);
     }
     function updateLabel(label) {
-      label.attr('x', d => d.x + rectSize / 2)
-        .attr('y', d => d.y + rectSize / 2)
+      label.attr('x', getLabelX)
+        .attr('y', getLabelY)
     }
     function updateTailLine(tailLine) {
-      tailLine.attr('x1', d => d.x - 5)
-        .attr('y1', d => d.y + rectSize / 2)
-        .attr('x2', d => d.x - 3)
-        .attr('y2', d => d.y + rectSize / 2)
+      tailLine.attr('x1', getTailLineX1)
+        .attr('y1', getTailLineY1)
+        .attr('x2', getTailLineX2)
+        .attr('y2', getTailLineY2)
     }
     function updateTailRing(tailRing) {
-      tailRing.attr('transform', d => `translate(${d.x - 20}, ${d.y + rectSize / 2}) rotate(45) translate(-17, -17)`)
+      tailRing.attr('transform', getTailRingPosition)
     }
     function updateHeadLine(headLine) {
-      headLine.attr('x1', d => d.x + rectSize + 3)
-        .attr('y1', d => d.y + rectSize / 2)
-        .attr('x2', d => d.x + rectSize + 5)
-        .attr('y2', d => d.y + rectSize / 2);
+      headLine.attr('x1', getHeadLineX1)
+        .attr('y1', getHeadLineY1)
+        .attr('x2', getHeadLineX2)
+        .attr('y2', getHeadLineY2);
     }
     function updateHeadRing(headRing) {
-      headRing.attr('cx', d => d.x + rectSize + 5 + 9)
-        .attr('cy', d => d.y + rectSize / 2)
+      headRing.attr('cx', getHeadRingCX)
+        .attr('cy', getHeadRingCY)
     }
     function update() {
       nodeGroup.call(updateNode);
@@ -147,93 +166,66 @@
       headLineGroup.call(updateHeadLine);
       headRingGroup.call(updateHeadRing);
     }
-    function dragStart(d) {
+    function dragNodeStart(d) {
+      d3.event.sourceEvent.stopPropagation();
       d3.select(this).raise().attr('stroke', 'black').attr('cursor', 'grab');
     }
-    function dragging(d) {
-      d.x = d3.event.x;
-      d.y = d3.event.y;
+    function draggingNode(d) {
+      d.nodex = d3.event.x;
+      d.nodey = d3.event.y;
       update();
     }
-    function dragEnd() {
+    function dragNodeEnd() {
       d3.select(this).attr('stroke', null).attr('cursor', null);
     }
-    nodeGroup.call(d3.drag().on('start', dragStart).on('drag', dragging).on('end', dragEnd));
-    // const snapContainer = svg.append('g').attr('transform', 'translate(66, 10)');
-    // const snapContainer = root.selectAll('g')
-    //   .data(nodes)
-    //   .enter()
-    //   .append('g')
-    //   .attr('transform', (d) => `translate(${d.x}, ${d.y})`)
-    //   .on('click', function (d) {
-    //     console.log('click from container')
-    //   });
-    // const head = snapContainer.append('g').attr('stroke', '#9B9B9B').attr('transform', 'translate(45, 22)');
-    // head.append('line')
-    //   .attr('stroke-width', 6)
-    //   .attr('stroke-linecap', 'square')
-    //   .attr('x1', -2.84078316e-14)
-    //   .attr('y1', 10)
-    //   .attr('x2', 23)
-    //   .attr('y2', 10)
-    // head.append('circle')
-    //   .attr('stroke-width', 2)
-    //   .attr('fill', '#CCDCEE')
-    //   .attr('cx', 32.5)
-    //   .attr('cy', 10)
-    //   .attr('r', 9)
-    //   .attr('cursor', 'pointer')
-    //   .on('mousedown', function (d) {
-    //     d3.event.stopPropagation();
-    //     console.log('mousedown from head');
-    //     shouPullLine = true;
-    //     selectedHeadCircle = d3.select(this);
-    //     selectedHeadLine = d3.select(this.parentNode).select('line');
-    //     console.log('circle', selectedHeadCircle);
-    //     console.log('line', selectedHeadLine);
-    //   })
-    //   .on('mouseup', function () {
-    //     selectedHeadCircle = null;
-    //     selectedHeadLine = null;
-    //   })
-    //   .on('click', function (d) {
-    //     d3.event.stopPropagation();
-    //   })
-    // const tail = snapContainer.append('g').attr('stroke', '#9B9B9B').attr('transform', 'translate(0, 15)');
-    // tail.append('line').attr('stroke-width', 6)
-    //   .attr('stroke-linecap', 'square')
-    //   .attr('x1', -2)
-    //   .attr('y1', 17.5)
-    //   .attr('x2', 55.5)
-    //   .attr('y2', 17.5);
-    // tail.append('path').attr('d', 'M17,29 C23.627417,29 29,23.627417 29,17 C29,10.372583 23.627417,5 17,5 C10.372583,5 5,10.372583 5,17')
-    //   .attr('stroke-width', 2.5)
-    //   .attr('transform', 'translate(-17, 17) rotate(45) translate(-17, -17) ')
-    //   .attr('fill', 'none');
-
-    // const body = snapContainer.append('polygon')
-    //   .attr('x', 10)
-    //   .attr('y', 10)
-    //   .attr('points', '0.5 0 62.5 1.13686838e-13 62.5 64 0.5 64')
-    //   .attr('fill', '#79A1E2');
-    // snapContainer.append('text').attr('font-size', 10)
-    //   .attr('font-weight', 'bold')
-    //   .attr('line-spacing', 11)
-    //   .attr('fill', '#000000')
-    //   .attr('x', 14.5)
-    //   .attr('y', 35)
-    //   .attr('pointer-events', 'none')
-    // .text(() => 'Mapper')
-
-    // snapContainer.call(d3.drag().on('start', dragStart).on('drag', dragging).on('end', dragEnd));
-
-    // d3.select(window).on('mousemove', function () {
-    //   if (selectedHeadCircle) {
-    //     const preX = selectedHeadCircle.cx, preY = selectedHeadCircle.cy;
-    //     console.log(preX, preY);
-    //     console.log(d3.event.x, d3.event.y);
-    //     console.log(d3.mouse(svg.node()))
-    //     // selectedHeadCircle.attr('cx', preX + d3.event.dx).attr('cy', preY + d3.event.dy)
-    //   }
-    // })
+    function dragLabelStart(d, i) {
+      d3.event.sourceEvent.stopPropagation();
+      d3.select(this).attr('cursor', 'grab');
+      const found = d3.selectAll('rect').filter(rect => rect === d);
+      if (found && found.size() === 1) {
+        found.raise().attr('stroke', 'black');
+      }
+    }
+    function draggingLabel(d) {
+      d.nodex = d3.event.x;
+      d.nodey = d3.event.y;
+      update();
+    }
+    function dragLabelEnd(d) {
+      d3.select(this).attr('cursor', 'default');
+      const found = d3.selectAll('rect').filter(rect => rect === d);
+      if (found && found.size() === 1) {
+        found.raise().attr('stroke', null);
+      }
+    }
+    function dragHeadRingStart(d) {
+      d3.select(this).raise().attr('stroke', 'black');
+    }
+    function draggingHeadRing(d) {
+      d.cx = d3.event.x;
+      d.cy = d3.event.y;
+      update();
+    }
+    function dragHeadRingEnd(d) {
+      d3.select(this).raise().attr('stroke', '#9B9B9B');
+      d3.select('#tailRingGroup').selectAll('path').filter((tail) => {
+        if (tail !== d) {
+          const tailRingX = getTailRingX(tail);
+          const tailRingY = getTailRingY(tail);
+          const distance = Math.sqrt(Math.pow((tailRingX - d3.event.x), 2) + Math.pow((tailRingY - d3.event.y), 2));
+          console.log(tail.label, distance);
+          if (distance > 10) {
+            d.cx = null;
+            d.cy = null;
+          } else {
+            d.cx = tailRingX;
+            d.cy = tailRingY;
+          }
+          update();
+        }
+      })
+    }
+    nodeGroup.call(d3.drag().subject(d => ({ x: d.nodex, y: d.nodey })).on('start', dragNodeStart).on('drag', draggingNode).on('end', dragNodeEnd));
+    labelsGroup.call(d3.drag().subject(d => ({ x: d.nodex, y: d.nodey })).on('start', dragLabelStart).on('drag', draggingLabel).on('end', dragLabelEnd));
+    headRingGroup.call(d3.drag().subject(d => ({ x: d.cx || getHeadRingCX(d), y: d.cy || getHeadRingCY(d) })).on('start', dragHeadRingStart).on('drag', draggingHeadRing).on('end', dragHeadRingEnd));
   </script>
