--- a/pipelinedemo/index.html
+++ b/pipelinedemo/index.html
@@ -1,7 +1,64 @@
-<html>
+<!doctype html>
+<html lang="en">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+  <title>Hello, world!</title>
+  <style>
+    .footer {
+      text-align: center;
+      height: 100px;
+      background: #EBB3A9;
+    }
+
+    .header {
+      text-align: center;
+      height: 100px;
+      background: #EBB3A9;
+    }
+
+    .leftBar {
+      text-align: center;
+      background: #EEEBD0;
+    }
+  </style>
+</head>
 
 <body>
-  <div id="app"></div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-2 leftBar">
+        <h3>Side Bar</h3>
+        <button id="addSnap">Add Snap</button>
+      </div>
+      <div class="col-10">
+        <div class="row header">Header</div>
+        <div class="row">
+          <div id="app"></div>
+        </div>
+        <div class="row footer">Footer</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
   <script src="./index.js"></script>
 </body>
 
